# stargate-mainboard-esp32

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: ci.yml
doc/: README.md  api-reference.md  architecture.md  ble-protocol.md  build-guide.md  coding-style.md  configuration-page.md  control-page.md  dial-algorithm.md  homing-algorithm.md  incoming-wormhole.md  misc.md  wizard-page.md  wornhole-types.md
doc/assets/: hysterisis-example.pdn
firmware/: README.md
firmware/doc/: configuration-page.md  control-page.md  copyright.md  diagnostic-page.md  dial-algorithm.md  homing-algorithm.md  incoming-wormhole.md  misc.md  ota-page.md  partitions.md  readme.md  spin-algorithm.md  stargate-project-api.md  stargate-type.md  stargate-types.md  webpage.md  wizard-page.md  wizard.md  wornhole-types.md
firmware/ring-factory/: CMakeLists.txt  sdkconfig
firmware/ring-fw/: CMakeLists.txt  sdkconfig  sdkconfig.esp5x  sdkconfig.old
firmware/stargate-fw/: CMakeLists.txt  embeddedgen.bat  sdkconfig  send-ota.sh
firmware/stargate-fw/main/: CMakeLists.txt  FWConfig.hpp  GateControl.cpp  GateControl.hpp  GateType.cpp  GateType.hpp  HttpClient.cpp  HttpClient.hpp  MainApp.cpp  Settings.cpp  Settings.hpp  WifiMgr.cpp  WifiMgr.hpp  idf_component.yml
firmware/stargate-fw/main-app/: App.cpp  App.hpp  CMakeLists.txt  FWConfig.hpp  HttpClient.cpp  HttpClient.hpp  SGResult.hpp  Settings.cpp  Settings.hpp  WifiMgr.cpp  WifiMgr.hpp
firmware/stargate-fw/main-app/Audio/: SoundFX.cpp  SoundFX.hpp
firmware/stargate-fw/main-app/Core/: Logging.hpp  Result.hpp  StateMachine.hpp
firmware/stargate-fw/main-app/Gate/: BaseGate.cpp  BaseGate.hpp  GateAddress.hpp  GateControl.cpp  GateControl.hpp  GateFactory.cpp  GateFactory.hpp  GateSymbol.hpp  MilkyWayGate.hpp  PegasusGate.hpp  UniverseGate.hpp
firmware/stargate-fw/main-app/HW/: HWConfig.hpp  SGHW_HAL.hpp
firmware/stargate-fw/main-app/Ring/: RingBLEClient.cpp  RingBLEClient.hpp  RingComm.cpp  RingComm.hpp
firmware/stargate-fw/main-app/WebServer/: APIURL.hpp  EmbeddedFiles.c  EmbeddedFiles.h  EmbeddedFiles.txt  GateAPI.cpp  OTA_API.cpp  SystemAPI.cpp  WebServer.cpp  WebServer.hpp
firmware/stargate-fw/main-app/Wormhole/: Wormhole.cpp  Wormhole.hpp
firmware/stargate-fw/main-app/webserver-assets/common/js/: apiurl.js
firmware/stargate-fw/main-app/webserver-assets/galaxies/milkyway/: README.md  stargate.css  stargate.html  stargate.js
firmware/stargate-fw/main-app/webserver-assets/galaxies/universe/: dial.css  dial.html  dial.js  index.html
firmware/stargate-fw/main-app/webserver-assets/galaxies/universe/js/: app.js
firmware/stargate-fw/main-app/webserver-assets/setup/: index.html  settings.html  setup.html
firmware/stargate-fw/main-app/webserver-assets/setup/js/: app.js  settings.js
firmware/stargate-fw/main/Audio/: SoundFX.cpp  SoundFX.hpp
firmware/stargate-fw/main/Common/: Chevron.hpp
firmware/stargate-fw/main/DHD/: USB_DHD.cpp  USB_DHD.hpp
firmware/stargate-fw/main/Gate/: AtlantisGate.cpp  AtlantisGate.hpp  BaseGate.cpp  BaseGate.hpp  GateAddress.hpp  GateControl.hpp  GateFactory.cpp  GateFactory.hpp  GateSymbol.hpp  KristianGate.cpp  KristianGate.hpp  MilkyWayGate.cpp  MilkyWayGate.hpp  PegasusGate.cpp  PegasusGate.hpp  UniverseGate.cpp  UniverseGate.hpp
firmware/stargate-fw/main/GateControl/: GateControl.cpp  GateControl.hpp
firmware/stargate-fw/main/HW/: BoardHW.cpp  BoardHW.hpp  BoardHWBase.cpp  BoardHWBase.hpp  HW.hpp  HWBase.hpp  HWConfig.hpp  PinkyBoardHW.cpp  PinkyBoardHW.hpp  PinkySGHW.cpp  PinkySGHW.hpp  SGHW_HAL.cpp  SGHW_HAL.hpp
firmware/stargate-fw/main/Ring/: RingComm.cpp  RingComm.hpp  RingU.cpp  RingU.hpp
firmware/stargate-fw/main/WebServer/: APIURL.hpp  EmbeddedFiles.c  EmbeddedFiles.h  EmbeddedFiles.txt  GateAPI.cpp  OTA_API.cpp  SystemAPI.cpp  WebServer.cpp  WebServer.hpp  WebServerAPI.cpp
firmware/stargate-fw/main/Wormhole/: Wormhole.cpp  Wormhole.hpp
firmware/tools/: embeddedgen.py
hardware/: StarGate-MainBoard.kicad_pcb  StarGate-MainBoard.kicad_prl  StarGate-MainBoard.kicad_pro  StarGate-MainBoard.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/stargate-main.pretty/: CRE1_3C_MUR.kicad_mod  CUI_PJ-037A.kicad_mod  C_0805_2012Metric.kicad_mod  Fiducial_1mm_Mask2mm.kicad_mod  JST_XA_B02B-XASK-1_1x02_P2.50mm_Vertical.kicad_mod  JST_XH_B4B-XH-A_1x04_P2.50mm_Vertical.kicad_mod  LED_0805_2012Metric.kicad_mod  MountingHole_2.5mm.kicad_mod  PinHeader_2x20_P2.54mm_Vertical.kicad_mod  R_0805_2012Metric.kicad_mod  SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod  SOT-23-3.kicad_mod  SSOP-24_3.9x8.7mm_P0.635mm.kicad_mod  TO-252-3_TabPin2.kicad_mod  TSSOP-28-1EP_4.4x9.7mm_P0.65mm.kicad_mod  TSSOP-28_6.1x9.7mm_P0.65mm.kicad_mod  (+2 more)
(+55 files in other folders)
